@@ -1,3 +1,8 @@
+2006-01-22  Rodney Dawes  <dobey@novell.com>
+
+	* legacy-icon-mapping.xml: Add animations context and link the
+	process-working icon to gnome-spinner for compatibility
+
 2006-01-20  Rodney Dawes  <dobey@novell.com>
 
 	* legacy-icon-mapping.xml: Fix typo in weather-few-clouds-night
